package behavioral.observer.ca1;

public interface Listener<T> {
    void listen(T t);
}
